# saffron

./: .gitignore  .gitmodules  Dockerfile  README.md  dev.sh
.github/workflows/: docker.yml  release.yml
saffron/: .gitmodules  CMakeLists.txt
saffron/include/core/: auth_manager.hpp  mpv_core.hpp  plex_api.hpp  plex_server.hpp  server_discovery.hpp  settings_manager.hpp
saffron/include/models/: plex_types.hpp
saffron/include/styles/: plex.hpp
saffron/include/util/: image_loader.hpp  overclock.hpp  shared_view_holder.hpp
saffron/include/view/: cast_card_cell.hpp  focusable_card.hpp  h_recycling_grid.hpp  media_card_data_source.hpp  recycling_grid.hpp
saffron/include/views/: collection_detail_view.hpp  collections_tab.hpp  config_view_tab.hpp  home_tab.hpp  library_browse_view.hpp  library_section_tab.hpp  library_tab.hpp  media_detail_view.hpp  media_grid_view.hpp  player_activity.hpp  player_view.hpp  playlists_tab.hpp  search_tab.hpp  search_view.hpp  season_view.hpp  server_list_tab.hpp  settings_tab.hpp  show_detail_view.hpp  tag_media_view.hpp  test_tab.hpp  video_profile.hpp  video_view.hpp
saffron/resources/i18n/en-US/: hints.json  strings.json
saffron/resources/xml/activity/: main.xml  main_test.xml
saffron/resources/xml/tabs/: collections.xml  config_view_tab.xml  home.xml  library.xml  playlists.xml  search.xml  server_list.xml
saffron/resources/xml/view/: video_profile.xml
saffron/scripts/: ns_debug.sh
saffron/source/: main.cpp
saffron/source/core/: auth_manager.cpp  mpv_core.cpp  plex_api.cpp  plex_server.cpp  server_discovery.cpp  settings_manager.cpp
saffron/source/models/: plex_types.cpp
saffron/source/util/: overclock.cpp  shared_view_holder.cpp
saffron/source/view/: cast_card_cell.cpp  focusable_card.cpp  h_recycling_grid.cpp  media_card_data_source.cpp  recycling_grid.cpp
saffron/source/views/: collection_detail_view.cpp  collections_tab.cpp  config_view_tab.cpp  home_tab.cpp  library_browse_view.cpp  library_section_tab.cpp  library_tab.cpp  media_detail_view.cpp  media_grid_view.cpp  player_activity.cpp  player_view.cpp  playlists_tab.cpp  search_tab.cpp  search_view.cpp  season_view.cpp  server_list_tab.cpp  settings_tab.cpp  show_detail_view.cpp  tag_media_view.cpp  video_profile.cpp  video_view.cpp
